--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
 </head>
 <body>
     <div id="app">
-        <div class="container">
+        <div class="container text-center">
             <h1 class="mt-3" v-bind:class="classiTitolo">Benvenuto in Vue</h1>
+            <div class="pt-5">
+                <img :src="immagine" alt="" v-bind:class="immagine">
+            </div>
 
-            <img src="" alt="" v-bind:class="immagine">
-
-            <div class="btn-group">
+            <div class="btn-group pt-5">
                 <input type="text" class="form-control" v-model="message">
                 <button class="btn btn-primary" @click="saluta">Saluta</button>
             </div>
             
 
-            <p>Contenuto dell'imput: <span class="text-danger">{{message}}</span></p>
+            <p>Contenuto dell'input: <span class="text-danger">{{message}}</span></p>
         </div>
     </div>
 
