--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <h1 class="mt-3" v-bind:class="classiTitolo">Benvenuto in Vue</h1>
             <div class="pt-5">
                 <img :src="immagine" alt="" v-bind:class="immagine">
+                <button class="btn btn-success my-5 d-block m-auto" @click="changeImage">Cambia immagine</button>
             </div>
+
 
             <div class="btn-group pt-5">
                 <input type="text" class="form-control" v-model="message">
